# gimlet-mollusk-svm-example

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package-lock.json  txtx.yml
programs/cpi_target/: Cargo.toml
programs/cpi_target/src/: lib.rs
programs/primary/: Cargo.toml
programs/primary/src/: lib.rs
programs/primary/tests/: cpi.rs
programs/simple_anchor_app/: Cargo.toml
programs/simple_anchor_app/src/: lib.rs
programs/simple_anchor_app/tests/: cpi.rs
runbooks/: README.md
runbooks/deployment/: main.tx
tests/: simple_anchor_app.ts
