[package]
name = "cpi_target"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_target"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
pinocchio = "0.11.1"
solana-address = { version = "2", features = ["decode"] }
solana-program-log = "1"
