[package]
name = "simple_anchor_app"
version = "0.1.0"
edition = "2021"
description = "Pinocchio port of the Anchor simple_anchor_app program (CPIs into cpi_target)"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_anchor_app"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
pinocchio = { version = "0.11.1", features = ["cpi"] }
solana-address = { version = "2", features = ["decode"] }
solana-program-log = "1"

[dev-dependencies]
# We use the `sbpf-debugger` feature of `mollusk-svm` to run the program in a local test environment.
mollusk-svm = { git = "https://github.com/anza-xyz/mollusk", branch = "agave-4.0", features = [
    "sbpf-debugger",
] }
solana-sdk = "3"
